--- a/tablesPractice.html
+++ b/tablesPractice.html
@@ -24,15 +24,15 @@
         <caption>
             Fig 1 : Table RowSpan & ColSpan
         </caption>
-        <!-- <colgroup>
+        <colgroup>
             <col span="1">
-            <col span="2" style="background-color: aqua;">
+            <col span="2" style="background-color:cadetblue;">
             <col span="1">
-        </colgroup> -->
+        </colgroup> 
         <thead>
             <tr>
                 <th rowspan="3">Day</th>
-                <th colspan="3">Seminar</th>
+                <th colspan="3" style="background-color: white;">Seminar</th>
             </tr>
             <tr>
                 <th colspan="2">Schedule</th>
