FigureTag added & removed tableRepresentation

--- a/linusTorvaldsTribute.html
+++ b/linusTorvaldsTribute.html
@@ -18,20 +18,12 @@
         <p>The Creator of Linux</p>
     </header>
     <main>
-        <!-- table to represent image and caption architecture -->
-        <table>
-            <tr>
-                <td>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Lc3_2018_%28263682303%29_%28cropped%29.jpeg/220px-Lc3_2018_%28263682303%29_%28cropped%29.jpeg"
-                        alt="Linus Torvalds Image">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    A photograph of Linus Torvalds
-                </td>
-            </tr>
-        </table>
+        <!-- using figure tag to add caption to image -->
+        <figure>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Lc3_2018_%28263682303%29_%28cropped%29.jpeg/220px-Lc3_2018_%28263682303%29_%28cropped%29.jpeg"
+                alt="Linus Torvalds Image">
+                <figcaption>A photograph of Linus Torvalds</figcaption>
+        </figure>
 
         <h2>Biography</h2>
         <p>
