--- a/linusTorvaldsTribute.html
+++ b/linusTorvaldsTribute.html
@@ -22,7 +22,7 @@
         <figure>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Lc3_2018_%28263682303%29_%28cropped%29.jpeg/220px-Lc3_2018_%28263682303%29_%28cropped%29.jpeg"
                 alt="Linus Torvalds Image">
-                <figcaption>A photograph of Linus Torvalds</figcaption>
+            <figcaption>A photograph of Linus Torvalds</figcaption>
         </figure>
 
         <h2>Biography</h2>
@@ -53,11 +53,11 @@
                 individuals who have made significant contributions to the field of consumer electronics</li>
         </ul>
 
-        <pre>
-     "One of the most influential people in the world."
-
-     -- <i>Time Magazine</i> <a href="http://www.thefamouspeople.com/profiles/linus-torvalds-3972.php" target="_blank">The Famous People</a>
-        </pre>
+        <blockquote>
+            <p>"One of the most influential people in the world."</p>
+            <cite>-- Time Magazine</cite> <a href="http://www.thefamouspeople.com/profiles/linus-torvalds-3972.php"
+                target="_blank">The Famous People</a>
+        </blockquote>
 
         <h2>Resources</h2>
         <p>Learn more about Linus Torvalds and his work:</p>
